--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
                       {% include './icons/file-earmark-plus.svg' %}
                   </a>
               {% endif %}
-              <h1><a href="/">QUESTO E' IL MIO BLOG, MERDE</a></h1>
+              <h1><a href="/">alBLOG</a></h1>
           </div>
         </header>
         <main class="container">
